Modify css add img

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,30 @@
 .navi {
   background-color: oklch(49.1% 0.27 292.581);
 }
+.container-task{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: oklch(89.4% 0.057 293.283);
+  background-image: url(../public/white\ todo.png);
+  width: 750px;
+  height: 700px;
+  margin-top: 11px;
+
+}
+.container-list{
+  display: flex;
+  justify-content: center;
+}
+ .container-footer{
+  background-color: oklch(49.1% 0.27 292.581);
+  color: white;
+  text-align: center;
+  width: 100%;
+  padding: 10px;
+  border-radius: 2px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+ }
 .navimenu{
   text-decoration: none;
 }
@@ -17,7 +41,7 @@ ul{
     margin-top: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: oklch(89.4% 0.057 293.283);
-    
+   
      
   }
   .container-task1{
